Added modal functionality and post-payment screens

--- a/source/index.html
+++ b/source/index.html
@@ -54,6 +54,26 @@
         </g>
       </g>
     </symbol>
+    <symbol id="arrow-back">
+      <g stroke="none" fill-rule="evenodd">
+        <g transform="translate(-1117.000000, -27.000000)">
+          <g transform="translate(1115.000000, 23.000000)">
+            <polygon transform="translate(10.623047, 8.412109) scale(-1, 1) translate(-10.623047, -8.412109) " points="18.8466797 8.41210938 14.4169922 12.8417969 14.4169922 9.17089844 2.39941406 9.17089844 2.39941406 7.65332031 14.4169922 7.65332031 14.4169922 3.98242188"></polygon>
+          </g>
+        </g>
+      </g>
+    </symbol>
+    <symbol id="hugs-logo">
+      <g id="logo" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+        <g id="hugs_package_sign_up@2x" transform="translate(-463.000000, -91.000000)">
+          <g id="Group" transform="translate(461.000000, 83.168724)">
+            <path d="M8.32948313,26.6617573 L2.06628971,26.6617573 L2.06628971,8.73235815 L8.32948313,8.73235815 L8.32948313,14.807387 L12.3078206,14.807387 L12.3078206,8.73235815 L18.571014,8.73235815 L18.571014,26.6617573 L12.3078206,26.6617573 L12.3078206,20.4254446 L8.32948313,20.4254446 L8.32948313,26.6617573 Z M22.1768082,20.1835186 L22.1768082,8.73235815 L28.6281663,8.73235815 L28.6281663,19.135173 C28.6281663,19.6727861 28.6819276,20.4254446 29.1926601,20.9630577 C29.5421086,21.339387 29.9721992,21.4469096 30.4829317,21.4469096 C31.1549481,21.4469096 31.558158,21.258745 31.800084,21.0168191 C32.2839358,20.5329672 32.2839358,19.5921442 32.2839358,19.135173 L32.2839358,8.73235815 L38.7621745,8.73235815 L38.7621745,19.7265474 C38.7621745,21.1243417 38.4933679,23.1672717 36.8805284,24.8338725 C35.0526436,26.7155186 32.4721004,27.0649672 30.4829317,27.0649672 C28.8432115,27.0649672 25.8594584,26.9036832 23.8165284,24.6994693 C22.4187342,23.1941524 22.1768082,21.5006709 22.1768082,20.1835186 Z M51.1310634,20.4792059 L51.1310634,16.2320619 L61.2113103,16.2320619 L61.2113103,16.6352717 C61.2113103,18.8394857 61.0231457,21.8232388 58.872693,24.1349754 C57.0985695,26.0435022 54.2223391,27.0649672 51.2654667,27.0649672 C47.5021745,27.0649672 45.2173185,25.5596503 43.8732856,24.1080948 C42.1798041,22.28021 41.561549,20.1028767 41.561549,17.7373787 C41.561549,14.4579384 42.8249399,12.3881277 44.0345695,11.1516174 C45.4861251,9.64630053 47.9591457,8.32914827 51.5611539,8.32914827 C53.4965613,8.32914827 55.1631621,8.70547749 56.829763,9.59253922 C58.3619605,10.4258396 59.4371868,11.4473046 60.2704872,12.8988602 L54.1954584,15.1568355 C53.8191292,14.565461 53.0933514,13.7859219 51.7224379,13.7859219 C50.7816148,13.7859219 50.0020757,14.1084898 49.4375819,14.6192223 C48.7118041,15.2912388 48.1204296,16.4471071 48.1204296,18.0061853 C48.1204296,19.2158149 48.5236395,20.4523252 49.3031786,21.2049837 C49.8139111,21.6888355 50.5128082,22.0114034 51.4267506,22.0114034 C52.3944543,22.0114034 53.6578453,21.6619549 54.0879358,20.4792059 L51.1310634,20.4792059 Z" id="HUG" fill="#8730E5"></path>
+            <polygon id="’" fill="#0BD07C" points="74.9920774 8.73235815 70.7449333 17.6029754 65.9601761 17.6029754 68.8364066 8.73235815"></polygon>
+            <path d="M90.3138634,9.88822646 L88.5666206,14.4579384 C87.7870815,13.9203252 86.3624066,13.1139055 84.910851,13.1139055 C84.5614025,13.1139055 84.0237893,13.1676668 83.6743407,13.4364734 C83.4324148,13.624638 83.3517728,13.8128026 83.3517728,14.0816092 C83.3517728,14.4579384 83.4055342,14.807387 84.4001185,15.0224322 L86.4699292,15.4794034 C88.0558881,15.828852 88.9967111,16.4739878 89.5343243,17.0116009 C90.6633119,18.1137079 90.9052379,19.4846215 90.9052379,20.5598479 C90.9052379,22.0920454 90.502028,23.5167203 89.2923984,24.7801112 C88.2709333,25.8284569 86.3355259,27.0649672 82.9754436,27.0649672 C80.2336165,27.0649672 78.4057317,26.2854281 76.8735342,25.667173 L76.2821597,25.425247 L78.2444477,20.3716832 L78.9433449,20.9092964 C79.6153613,21.4200289 80.9862749,22.2264487 82.5722337,22.2264487 C83.4592955,22.2264487 83.8356247,22.0114034 83.970028,21.9038808 C84.2657152,21.6619549 84.3194765,21.3662676 84.3194765,21.097461 C84.3194765,20.9361771 84.2925959,20.6673705 84.1044313,20.4792059 C83.889386,20.2641606 83.5399374,20.1835186 82.867921,20.0491153 L81.2819621,19.7534281 C80.2604971,19.5652635 79.1583901,19.2426956 78.1638058,18.2212306 C77.2498634,17.2804075 76.8735342,16.2051812 76.8735342,14.9149096 C76.8735342,13.2483088 77.438028,11.8236339 78.620777,10.6408849 C79.9916905,9.24309066 82.0077399,8.32914827 84.8570897,8.32914827 C86.2817646,8.32914827 88.13653,8.5710742 90.3138634,9.88822646 Z" id="S" fill="#8730E5"></path>
+          </g>
+        </g>
+      </g>
+    </symbol>
   </svg>
 
   <div class="packages">
@@ -95,13 +115,7 @@
                   usd
                 </dd>
                 <dt class="card__key">
-                  Физический ключ безопасности
-                </dt>
-                <dd class="card__value">
-                  нет
-                </dd>
-                <dt class="card__key">
-                  Определение Риск профиля клиента
+                  Помощь в открытие счёта у брокера (Interactive Brokers/Exante)
                 </dt>
                 <dd class="card__value">
                   включено
@@ -113,7 +127,61 @@
                   дистанционно
                 </dd>
                 <dt class="card__key">
-                  Помощь в открытие счёта у брокера (Interactive Brokers/Exante)
+                  Определение Риск профиля клиента
+                </dt>
+                <dd class="card__value">
+                  включено
+                </dd>
+                <dt class="card__key">
+                  Авторская инвестиционная аналитика от команды HUGS'FUND
+                </dt>
+                <dd class="card__value">
+                  нет
+                </dd>
+                <dt class="card__key">
+                  Физический ключ безопасности
+                </dt>
+                <dd class="card__value">
+                  нет
+                </dd>
+                <dt class="card__key">
+                  Анализ инвестиционных идей клиента
+                </dt>
+                <dd class="card__value">
+                  нет
+                </dd>
+                <dt class="card__key">
+                  Доступ в закрытый инвестиционный клуб HUGS'WELL
+                </dt>
+                <dd class="card__value">
+                  30 дней
+                </dd>
+                <dt class="card__key">
+                  Кол-во консультаций с инвестиционным советником HUGS'FUND/в год
+                </dt>
+                <dd class="card__value">
+                  1
+                </dd>
+                <dt class="card__key">
+                  Скидки на мероприятия HUGS'FUND и его партнеров
+                </dt>
+                <dd class="card__value">
+                  до 5%
+                </dd>
+                <dt class="card__key">
+                  Доступ к эксклюзивные инвестиционным идеям для экспертов HUGS'FUND
+                </dt>
+                <dd class="card__value">
+                  нет
+                </dd>
+                <dt class="card__key">
+                  Базовый курс обучения
+                </dt>
+                <dd class="card__value">
+                  нет
+                </dd>
+                <dt class="card__key">
+                  Продвинутое обучение
                 </dt>
                 <dd class="card__value">
                   нет
@@ -124,7 +192,7 @@
               <button
                 class="card__button button"
                 type="button"
-                data-order-start
+                data-modal-trigger="HUGS'START"
               >
                 Заказать
               </button>
@@ -141,10 +209,10 @@
             </svg>
             <div class="card__prices">
               <span class="card__price card__price--old">
-                199$
+                499$
               </span>
               <span class="card__price">
-                99$
+                349$
               </span>
             </div>
           </div>
@@ -155,7 +223,7 @@
                   Инвестиционные продукты
                 </dt>
                 <dd class="card__value card__value--capitalize">
-                  hugs'a, hugs'on
+                  HUGS’A, HUGS’ON, HUGS’D*, HUGS’GROWTH*
                 </dd>
                 <dt class="card__key">
                   Валюта инвестирования
@@ -164,13 +232,7 @@
                   usd
                 </dd>
                 <dt class="card__key">
-                  Физический ключ безопасности
-                </dt>
-                <dd class="card__value">
-                  нет
-                </dd>
-                <dt class="card__key">
-                  Определение Риск профиля клиента
+                  Помощь в открытие счёта у брокера (Interactive Brokers/Exante)
                 </dt>
                 <dd class="card__value">
                   включено
@@ -182,7 +244,67 @@
                   дистанционно
                 </dd>
                 <dt class="card__key">
-                  Помощь в открытие счёта у брокера (Interactive Brokers/Exante)
+                  Определение Риск профиля клиента
+                </dt>
+                <dd class="card__value">
+                  включено
+                </dd>
+                <dt class="card__key">
+                  Авторская инвестиционная аналитика от команды HUGS'FUND
+                </dt>
+                <dd class="card__value">
+                  включено
+                </dd>
+                <dt class="card__key">
+                  Физический ключ безопасности
+                </dt>
+                <dd class="card__value">
+                  включено
+                </dd>
+                <dt class="card__key">
+                  Анализ инвестиционных идей клиента
+                </dt>
+                <dd class="card__value">
+                  нет
+                </dd>
+                <dt class="card__key">
+                  Персональный инвестиционный советник
+                </dt>
+                <dd class="card__value">
+                  нет
+                </dd>
+                <dt class="card__key">
+                  Доступ в закрытый инвестиционный клуб HUGS'WELL
+                </dt>
+                <dd class="card__value">
+                  90 дней
+                </dd>
+                <dt class="card__key">
+                  Кол-во консультаций с инвестиционным советником HUGS'FUND/в год
+                </dt>
+                <dd class="card__value">
+                  4
+                </dd>
+                <dt class="card__key">
+                  Скидки на мероприятия HUGS'FUND и его партнеров
+                </dt>
+                <dd class="card__value">
+                  до 10%
+                </dd>
+                <dt class="card__key">
+                  Доступ к эксклюзивные инвестиционным идеям для экспертов HUGS'FUND
+                </dt>
+                <dd class="card__value">
+                  90 дней
+                </dd>
+                <dt class="card__key">
+                  Базовый курс обучения
+                </dt>
+                <dd class="card__value">
+                  включено
+                </dd>
+                <dt class="card__key">
+                  Продвинутое обучение
                 </dt>
                 <dd class="card__value">
                   нет
@@ -193,7 +315,7 @@
               <button
                 class="card__button button"
                 type="button"
-                data-order-start
+                data-modal-trigger="HUGS'MASTER"
               >
                 Заказать
               </button>
@@ -210,10 +332,10 @@
             </svg>
             <div class="card__prices">
               <span class="card__price card__price--old">
-                199$
+                1299$
               </span>
               <span class="card__price">
-                99$
+                1000$/год
               </span>
             </div>
           </div>
@@ -223,23 +345,17 @@
                 <dt class="card__key">
                   Инвестиционные продукты
                 </dt>
-                <dd class="card__value card__value--capitalize">
-                  hugs'a, hugs'on
+                <dd class="card__value">
+                  Все
                 </dd>
                 <dt class="card__key">
                   Валюта инвестирования
                 </dt>
                 <dd class="card__value  card__value--capitalize">
-                  usd
+                  usd, eur
                 </dd>
                 <dt class="card__key">
-                  Физический ключ безопасности
-                </dt>
-                <dd class="card__value">
-                  нет
-                </dd>
-                <dt class="card__key">
-                  Определение Риск профиля клиента
+                  Помощь в открытие счёта у брокера (Interactive Brokers/Exante)
                 </dt>
                 <dd class="card__value">
                   включено
@@ -248,13 +364,73 @@
                   Коммуникация с клиентом
                 </dt>
                 <dd class="card__value">
-                  дистанционно
+                  дистанционно и очно
                 </dd>
                 <dt class="card__key">
-                  Помощь в открытие счёта у брокера (Interactive Brokers/Exante)
+                  Определение Риск профиля клиента
                 </dt>
                 <dd class="card__value">
-                  нет
+                  включено
+                </dd>
+                <dt class="card__key">
+                  Авторская инвестиционная аналитика от команды HUGS'FUND
+                </dt>
+                <dd class="card__value">
+                  включено
+                </dd>
+                <dt class="card__key">
+                  Физический ключ безопасности
+                </dt>
+                <dd class="card__value">
+                  включено
+                </dd>
+                <dt class="card__key">
+                  Анализ инвестиционных идей клиента
+                </dt>
+                <dd class="card__value">
+                  включено
+                </dd>
+                <dt class="card__key">
+                  Персональный инвестиционный советник
+                </dt>
+                <dd class="card__value">
+                  включено
+                </dd>
+                <dt class="card__key">
+                  Доступ в закрытый инвестиционный клуб HUGS'WELL
+                </dt>
+                <dd class="card__value">
+                  365 дней
+                </dd>
+                <dt class="card__key">
+                  Кол-во консультаций с инвестиционным советником HUGS'FUND/в год
+                </dt>
+                <dd class="card__value">
+                  неограниченно
+                </dd>
+                <dt class="card__key">
+                  Скидки на мероприятия HUGS'FUND и его партнеров
+                </dt>
+                <dd class="card__value">
+                  до 50%
+                </dd>
+                <dt class="card__key">
+                  Доступ к эксклюзивные инвестиционным идеям для экспертов HUGS'FUND
+                </dt>
+                <dd class="card__value">
+                  365 дней
+                </dd>
+                <dt class="card__key">
+                  Базовый курс обучения
+                </dt>
+                <dd class="card__value">
+                  включено
+                </dd>
+                <dt class="card__key">
+                  Продвинутое обучение
+                </dt>
+                <dd class="card__value">
+                  включено
                 </dd>
               </dl>
             </div>
@@ -262,7 +438,7 @@
               <button
                 class="card__button button"
                 type="button"
-                data-order-start
+                data-modal-trigger="HUGS'BLACK"
               >
                 Заказать
               </button>
@@ -273,7 +449,77 @@
     </div>
   </div>
 
+  <div class="modal" data-modal>
+    <div class="modal__content" data-modal-content>
+      <button
+        class="modal__close"
+        type="button"
+        data-modal-close
+        data-order-type
+      >
+        <svg class="modal__icon" width="1.7rem" height="0.9rem" viewBox="0 0 17 9">
+          <use xlink:href="#arrow-back"></use>
+        </svg>
+        назад
+      </button>
+      <svg class="modal__logo" width="8.9rem" height="2rem" viewBox="0 0 89 20">
+        <use xlink:href="#hugs-logo"></use>
+      </svg>
+      <h3 class="modal__heading" data-modal-heading>
+        Заказать
+      </h3>
+      <form action="#">
+        <div class="modal__form">
+          <label class="modal__label" for="input-customer-name">
+            ФИО
+          </label>
+          <input
+            class="modal__input input"
+            type="text"
+            placeholder="Введите ФИО"
+            name="customerName"
+            id="input-customer-name"
+          >
+          <label class="modal__label" for="input-customer-email">
+            Email<span class="modal__required">*</span>
+          </label>
+          <input
+            class="modal__input input"
+            type="email"
+            placeholder="Введите Email"
+            name="customerMail"
+            id="input-customer-email"
+            required
+          >
+          <label class="modal__label" for="input-customer-phone">
+            Телефон<span class="modal__required">*</span>
+          </label>
+          <input
+            class="modal__input input"
+            type="tel"
+            placeholder="+38 xxx xx xx xxx"
+            name="customerPhone"
+            id="input-customer-phone"
+            pattern="[+]{1}[0-9]{11,14}"
+            required
+          >
+        </div>
+        <button
+          class="modal__submit button button--dark"
+          type="submit"
+        >
+          Отправить
+        </button>
+      </form>
+      <p class="modal__confidential">
+        Мы придерживаемся политики полной конфиденциальности и<br/>сохранности Ваших личной
+        данных.<br/>© <span data-modal-year>2020</span> HUG’S
+      </p>
+    </div>
+  </div>
+
   <script src="https://unpkg.com/simplebar@latest/dist/simplebar.min.js"></script>
+  <script src="js/modal.js"></script>
 
 </body>
 </html>
